--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "chariot-tooltips": "^1.0.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "tippy.js": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -21,6 +22,7 @@
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   }
